# openapi.yaml
@@ -45,13 +45,12 @@ paths:
           $ref: '#/components/responses/500InternalServerError'
         'default':
           $ref: '#/components/responses/Default'
-
     post:
       tags:
         - submissions
       summary: Create submission
       description: Creates a new submission.
-      operationId: uploadSubmission
+      operationId: createSubmission
       requestBody:
         description: Submission to be created.
         required: true
@@ -163,30 +162,14 @@ components:
       minimum: 1
       example: 1
 
-    Submitter:
-      type: object
-      title: Submitter
-      description: The submitter of the submission.
-      additionalProperties: false
-      nullable: false
-      required:
-        - id
-        - email
-      properties:
-        id:
-          type: integer
-          format: int64
-          description: ID of the submitter.
-          minimum: 1
-          example: 1
-        email:
-          title: Submitter Email
-          type: string
-          format: email
-          description: Email of the user.
-          example: jpvlck@students.zcu.cz
-          maxLength: 255
-          minLength: 1
+    SubmitterEmail:
+      title: Submitter Email
+      type: string
+      format: email
+      description: Email of the user.
+      example: jpvlck@students.zcu.cz
+      maxLength: 255
+      minLength: 1
 
     DocumentSubmissionState:
       type: string
@@ -219,7 +202,7 @@ components:
         id:
           $ref: '#/components/schemas/SubmissionId'
         submitter:
-          $ref: '#/components/schemas/Submitter'
+          $ref: '#/components/schemas/SubmitterEmail'
         subject:
           type: string
           description: Subject of the submission.
@@ -329,7 +312,7 @@ components:
         id:
           $ref: '#/components/schemas/SubmissionId'
         submitter:
-          $ref: '#/components/schemas/Submitter'
+          $ref: '#/components/schemas/SubmitterEmail'
         referenceNumber:
           $ref: '#/components/schemas/Submission/properties/referenceNumber'
         createdAt:
@@ -351,7 +334,7 @@ components:
         - files
       properties:
         email:
-          $ref: '#/components/schemas/Submitter/properties/email'
+          $ref: '#/components/schemas/SubmitterEmail'
         subject:
           $ref: '#/components/schemas/Submission/properties/subject'
         description:
@@ -403,9 +386,7 @@ components:
             $ref: '#/components/schemas/SubmissionDetail'
           example:
             - id: 1
-              submitter:
-                id: 1
-                email: jpvlck@students.zcu.cz
+              submitter: jpvlck@students.zcu.cz
               referenceNumber: "C120251"
               createdAt: "2025-01-01T00:00:00Z"
               state: "ACCEPTED"
